--- a/src/app/shared/login-form/login-form.component.scss
+++ b/src/app/shared/login-form/login-form.component.scss
@@ -113,7 +113,7 @@ input {
 .buttonShifting2 {
   flex: 1;
   text-align: center;
-  min-width: 130px;
+  width: 50%;
   margin: 5px;
   font-family: "Murecho", sans-serif;
   border-radius: 10px;
