--- a/src/app/shared/user-profile/user-profile.component.html
+++ b/src/app/shared/user-profile/user-profile.component.html
@@ -10,6 +10,7 @@
   </div>
   <button
     mat-icon-button
+    class="arrow-down-icon"
     [matMenuTriggerFor]="profileMenu"
     aria-label="User menu"
   >
