--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -17,7 +17,7 @@ app-header-nav {
   top: 0;
   left: 0;
   right: 0;
-  height: 64px; // match the height from mat-toolbar
+  height: 64px;
   z-index: 1000;
 }
 
@@ -32,4 +32,120 @@ app-header-nav {
 
 .main-content.sidebar-collapsed {
   margin-left: 100px;
+}
+
+/* Toggle button for small screens */
+.sidebar-mobile-toggle {
+  position: fixed;
+  top: 14px;
+  left: 14px;
+  z-index: 2001;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 20%;
+  width: 36px;
+  height: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+
+  // Default: hidden on larger screens
+  display: none;
+}
+
+.sidebar-mobile-toggle i.bi {
+  font-size: 18px;
+  color: #333;
+}
+
+/* -------------------------- */
+/* Tablet (≤ 1023px) */
+/* -------------------------- */
+@media (max-width: 1023px) {
+  .main-content {
+    margin-left: 270px;
+    margin-right: 16px;
+    padding: 90px 16px;
+  }
+
+  .main-content.sidebar-collapsed {
+    margin-left: 100px;
+  }
+
+  .sidebar-toggle-btn-mobile {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 2000;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 20%;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .sidebar-toggle-btn-mobile i {
+    font-size: 18px;
+    color: #333;
+  }
+
+  .sidebar-mobile-toggle {
+    //display: none;
+    display: flex;
+  }
+}
+
+/* -------------------------- */
+/* Phone (≤ 767px) */
+/* -------------------------- */
+@media (max-width: 767px) {
+  .main-content {
+    margin: 0;
+    padding: 80px 12px;
+  }
+
+  .main-content.sidebar-collapsed {
+    margin: 0;
+  }
+
+  app-sidebar {
+    transform: translateX(0);
+    transition: transform 0.3s ease;
+    width: 240px;
+  }
+
+  app-sidebar.collapsed {
+    transform: translateX(-100%);
+  }
+
+  .sidebar-toggle-btn-mobile {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 2000;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 20%;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .sidebar-toggle-btn-mobile i {
+    font-size: 18px;
+    color: #333;
+  }
+
+  .sidebar-mobile-toggle {
+    //display: none;
+    display: flex;
+  }
 }
