--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use "@angular/material" as mat;
+
 @include mat.core();
 
 html {
@@ -20,6 +21,7 @@ html {
 html,
 body {
   height: 100%;
+  font-family: "Murecho", sans-serif;
 }
 body {
   margin: 0;
