--- a/src/app/pages/authentication/authentication.component.scss
+++ b/src/app/pages/authentication/authentication.component.scss
@@ -82,7 +82,7 @@
     transition: transform 0.6s ease-in-out;
 
     .overlay {
-      background: rgb(124, 165, 150); /* Turquoise color */
+      background: rgb(124, 165, 150);
       color: white;
       height: 100%;
       width: 100%;
@@ -118,7 +118,7 @@
   }
 }
 
-/* Styling for the overlay buttons */
+/* Overlay buttons */
 .overlay-panel {
   h1 {
     font-weight: 500;
