--- a/src/app/pages/user-management/user-management.component.html
+++ b/src/app/pages/user-management/user-management.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <!-- Loading spinner (loading spinner) -->
+  <!-- Loading spinner -->
   <div *ngIf="isLoading" class="loading-spinner">
     <mat-spinner diameter="40"></mat-spinner>
   </div>
